# libgitdit

./: .gitignore  CHANGELOG.md  Cargo.toml
src/: base.rs  error.rs  gc.rs  issue.rs  iter.rs  lib.rs  object.rs  reference.rs  remote.rs  repository.rs  test_utils.rs  trailer.rs  traversal.rs
src/message/: mod.rs
src/object/: commit.rs  tests.rs  tree.rs
src/trailer/: accumulation.rs  filter.rs  iter.rs  spec.rs
