[package]
name = "libgitdit"
version = "0.5.0"
description = "A library for distributed issue tracking in git"
authors = ["Matthias Beyer <mail@beyermatthias.de>",
           "Julian Ganz <neither@nut.email>"]
license = "MPL-2.0"
edition = "2024"

[dependencies]
git2 = { version = "0.20", optional = true }
